# pyCinemetrics

./: .gitignore  main.py  pyproject.toml  readme.md  readme.txt  requirements.txt  video.txt
.github/workflows/: ci.yml
app/backend/: analysis_pipeline.py  main.py
app/backend/algorithms/: img2Colors.py  resultsave.py  shotcutTransNetV2.py  shotscale.py  shotscaleconfig.py  subtitleEasyOcr.py  wordcloud2frame.py
app/web/: app.js  index.html  styles.css
docs/: RELEASE.md
img/RIB30-draft-2/: colors.csv  shotlen.csv
img/sample/: colors.csv  objects.csv  shotlen.csv
package/: win64.spec
src/: main.py  video.txt
src/algorithms/: img2Colors.py  objectDetection.py  shotcutTransNetV2.py  shotscale.py  shotscaleconfig.py  subtitleEasyOcr.py  wordcloud2frame.py
src/ui/: analyze.py  control.py  info.py  subtitle.py  timeline.py  vlcplayer.py
tests/smoke/: test_output_generation.py
