[project]
name = "pycinemetrics"
version = "0.1.0"
description = "Desktop computational film analysis toolkit with shot, color, object, subtitle, and shot-scale pipelines."
readme = "readme.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "easyocr>=1.7.2",
    "ffmpeg-python>=0.2.0",
    "jieba>=0.42.1",
    "matplotlib>=3.10.5",
    "numpy>=2.1.3",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.9.1",
    "python-vlc>=3.0.21203",
    "tensorflow>=2.19.0",
    "torchvision>=0.23.0",
    "transnetv2",
    "wordcloud>=1.9.4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[tool.uv.sources]
transnetv2 = { git = "https://github.com/soCzech/TransNetV2" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "native", "models"]

[tool.ruff.lint]
select = ["F"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src"
exclude = "(^native/|^models/|^img/)"
